--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vip",
-  "version": "2.0.0",
+  "private": true,
+  "version": "1.0.0",
   "scripts": {
     "tsc": "tsc",
     "tsc:w": "tsc -w",
