--- a/package.json
+++ b/package.json
@@ -9,31 +9,23 @@
   },
   "dependencies": {
     "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
-    "systemjs": "0.19.27",
+    "es6-shim": "^0.35.1",
+
+    "systemjs": "0.19.36",
     "core-js": "^2.4.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "^0.6.12",
 
-    "@angular/common":  "2.0.0-rc.4",
-    "@angular/compiler":  "2.0.0-rc.4",
-    "@angular/core":  "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http":  "2.0.0-rc.4",
-    "@angular/platform-browser":  "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic":  "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.1",
-
-    "@angular2-material/button": "^2.0.0-alpha.6",
-    "@angular2-material/input": "^2.0.0-alpha.6",
-    "@angular2-material/card": "^2.0.0-alpha.6",
-    "@angular2-material/checkbox": "^2.0.0-alpha.6",
-    "@angular2-material/core": "^2.0.0-alpha.6",
-    "@angular2-material/progress-circle": "^2.0.0-alpha.6",
-    "@angular2-material/radio": "^2.0.0-alpha.6",
-    "@angular2-material/sidenav": "^2.0.0-alpha.6",
-    "@angular2-material/toolbar": "^2.0.0-alpha.6",
+    "@angular/common": "2.0.0-rc.5",
+    "@angular/compiler": "2.0.0-rc.5",
+    "@angular/core": "2.0.0-rc.5",
+    "@angular/forms": "0.3.0",
+    "@angular/http": "2.0.0-rc.5",
+    "@angular/platform-browser": "2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
+    "@angular/router": "3.0.0-rc.1",
+    "@angular/upgrade": "2.0.0-rc.5",
 
     "moment": "^2.11.2",
     "angular2-moment": "^0.8.0",
